# predix-program

./: README.MD
forecast-market/: Cargo.toml
forecast-market/src/: constant.rs  error.rs  helper.rs  lib.rs  message.rs
forecast-market/src/instructions/: bet.rs  bet_cross_chain.rs  claim_token.rs  mod.rs
forecast-market/src/instructions/admin/: add_answer_key.rs  adjourn_market.rs  approve_market.rs  draft_market.rs  finish_market.rs  initialize.rs  mod.rs  retrieve_token.rs  set_account.rs  sucess_market.rs  update_owner.rs  update_reward_config.rs
forecast-market/src/states/: answer.rs  betting.rs  betting_cross_chain.rs  config.rs  foreign_emitter.rs  market.rs  mod.rs
